# MetroParser

./: Makefile  README.md  pyproject.toml  requirements.txt
metroparser/: collect_pages.py  init_data.py  main.py  parse_data.py
result/moscow/: data_Doroznaya_1.json  data_Leningradskaya_71.json  data_ProspectMira_211.json
result/saint_petersburg/: data_Comendantskiy_3.json  data_Kosygina_4.json  data_Pulkovskoe_23.json
